--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <link rel="stylesheet" href="style.css" />
         <title>PAWS 🐶</title>
     </head>
-    <body></body>
+    <body>
+        <header></header>
+        <main></main>
+        <footer></footer>
+    </body>
     <script src="index.js"></script>
 </html>
