--- a/index.html
+++ b/index.html
@@ -43,10 +43,14 @@
                                 <a class="navbar-item">Form2</a>
                             </div>
                         </div> -->
-                        <a class="navbar-item"> Home </a>
-                        <a class="navbar-item"> Articles </a>
-                        <a class="navbar-item"> Dog Details </a>
-                        <a class="navbar-item"> About </a>
+                        <a class="navbar-item" href="/index.html"> Home </a>
+                        <a class="navbar-item" href="/articles.html">
+                            Articles
+                        </a>
+                        <a class="navbar-item" href="/food.html">
+                            Dog Details
+                        </a>
+                        <a class="navbar-item" href="/about.html"> About </a>
                     </div>
                 </div>
             </nav>
@@ -80,6 +84,7 @@
                                         <a
                                             role="button"
                                             class="has-text-centered card-footer-item"
+                                            id="shelter-btn"
                                         >
                                             Click Here
                                         </a>
@@ -103,6 +108,7 @@
                                         <a
                                             role="button"
                                             class="has-text-centered card-footer-item"
+                                            id="dog-btn"
                                         >
                                             Click Here
                                         </a>
@@ -116,7 +122,7 @@
                     <div class="form-parent has-background-link-light box px-3">
                         <h1 class="subtitle has-text-centered">Details</h1>
                         <!-- Shelter Form -->
-                        <form style="display: none" id="shelterForm">
+                        <form id="shelterForm">
                             <div class="field">
                                 <label class="label">Name</label>
                                 <div class="control">
@@ -201,7 +207,7 @@
                             </div>
                         </form>
                         <!-- Dog Form -->
-                        <form style="display: none" id="dogForm">
+                        <form id="dogForm">
                             <div class="field">
                                 <label class="label">Name</label>
                                 <div class="control">
