--- a/index.html
+++ b/index.html
@@ -292,7 +292,12 @@
                 </div>
             </div>
         </main>
-        <footer></footer>
+        <hr />
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>PAW Shelter<sup>©</sup>- All rights reserved®.</p>
+            </div>
+        </footer>
     </body>
     <script src="index.js"></script>
 </html>
