--- a/food.html
+++ b/food.html
@@ -11,6 +11,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
+        <link rel="stylesheet" href="custom.css" />
         <link rel="stylesheet" href="style.css" />
         <title>PAWS 🐶 FOOD</title>
     </head>
@@ -55,7 +56,219 @@
                 </div>
             </nav>
         </header>
-        <main></main>
+        <main>
+            <div class="container is-fluid">
+                <div class="card-parent-parent">
+                    <div class="card-parent">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure
+                                    class="image is-square"
+                                    style="object-fit: cover"
+                                >
+                                    <img
+                                        src="https://images.unsplash.com/photo-1529831129093-0fa4866281ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Lab</p>
+                                        <p class="subtitle is-6">Harry</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <figure
+                                    class="image is-square"
+                                    style="object-fit: cover"
+                                >
+                                    <img
+                                        src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Lab</p>
+                                        <p class="subtitle is-6">Harry</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-parent">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure
+                                    class="image is-square"
+                                    style="object-fit: cover"
+                                >
+                                    <img
+                                        src="https://images.unsplash.com/photo-1632165258904-21ca36a01ee0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Lab</p>
+                                        <p class="subtitle is-6">Harry</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img
+                                        src="https://images.unsplash.com/photo-1521907554502-7440e4702fc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Pug</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.Lorem20
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img
+                                        src="https://images.unsplash.com/photo-1628579550131-a99284d5b330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">German Shepard</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-parent">
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img
+                                        src="https://images.unsplash.com/photo-1550165298-e574b8c3c7f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=749&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">German Shepard</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img
+                                        src="https://images.unsplash.com/photo-1616322494008-d2c1712bbe50?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Doberman</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris. \
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-image">
+                                <figure class="image is-4by3">
+                                    <img
+                                        src="https://images.unsplash.com/photo-1590925888274-723778397410?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                                        alt="Placeholder image"
+                                    />
+                                </figure>
+                            </div>
+                            <div class="card-content">
+                                <div class="media">
+                                    <div class="media-content">
+                                        <p class="title is-4">Husky</p>
+                                    </div>
+                                </div>
+
+                                <div class="content">
+                                    Lorem ipsum dolor sit amet, consectetur
+                                    adipiscing elit. Phasellus nec iaculis
+                                    mauris.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <hr />
         <footer class="footer">
             <div class="content has-text-centered">
