--- a/about.html
+++ b/about.html
@@ -56,7 +56,68 @@
                 </div>
             </nav>
         </header>
+        <main>
+            <div class="container is-fluid">
+                <section style="margin-left: 50px">
+                    <h1 class="title">PAW Shelter Family</h1>
+                    <h2 class="subtitle">
+                        <ul>
+                            <li>Arjun Reddy (Chief Executive Officer)</li>
+                            <li>Udit Thapa (Executive assistant)</li>
+                            <li>Akshat (Healthcare and Food manager)</li>
+                        </ul>
+                    </h2>
+                </section>
+                <br />
+                <div class="columns">
+                    <div class="column is-half">
+                        <div class="section">
+                            <h1 class="title">About Us</h1>
 
+                            <h2 class="subtitle">
+                                PAW provide shelter and healthcare to dogs that
+                                needs our help. We believe animals are people
+                                too, like us they have the right to life,
+                                liberty and to live a happy life. Our
+                                shelter-cum-healthcare is anticipated to work
+                                for 24x7 that would give, rescue, proper care,
+                                home, food, playing time, serve as a holding
+                                centre for animals of cruelty cases and various
+                                other activities. So our company decided to make
+                                a website which will take care of these dogs and
+                                give shelter to them via the website, targeting
+                                a large audience.
+                            </h2>
+                        </div>
+                    </div>
+                    <div class="column is-half">
+                        <img
+                            src="https://images.unsplash.com/photo-1521247560470-d2cbfe2f7b47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fGRvZ3MlMjBhbmQlMjBodW1hbnN8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60"
+                            alt="Dog Image"
+                        />
+                    </div>
+                </div>
+                <br />
+                <section class="px-3" style="margin-left: 50px">
+                    <h1 class="title">Contact Details</h1>
+                    <h2 class="subtitle">
+                        <ul>
+                            <li>
+                                <a href="tel:+919851743471">
+                                    Contact no: +919851743471</a
+                                >
+                            </li>
+                            <li>
+                                <a href="mailto:pawshelterservice@gmail.com">
+                                    E-mail: pawshelterservice@gmail.com</a
+                                >
+                            </li>
+                            <li>Address: Rajouri Garden, New Delhi, 110027</li>
+                        </ul>
+                    </h2>
+                </section>
+            </div>
+        </main>
         <hr />
         <footer class="footer">
             <div class="content has-text-centered">
