--- a/food.html
+++ b/food.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar" role="navigation">
                 <div class="navbar-brand">
-                    <a class="navbar-item" href="https://bulma.io">
+                    <a class="navbar-item" href="/index.html">
                         <img src="brown logo.png" id="img" />
                     </a>
 
