--- a/articles.html
+++ b/articles.html
@@ -60,9 +60,7 @@
                 <div class="columns">
                     <div class="column is-half">
                         <div class="section">
-                            <h1 class="subtitle">
-                                Lorem ipsum dolor sit amet.
-                            </h1>
+                            <h1 class="subtitle">How to Take Care of a Dog</h1>
                             <article class="message is-dark">
                                 <div class="message-body">
                                     Lorem ipsum dolor sit amet, consectetur
@@ -102,7 +100,7 @@
                     <div class="column is-half">
                         <div class="section">
                             <h1 class="subtitle">
-                                Lorem ipsum dolor sit amet.
+                                How to Know if Your Dog Needs a Diet Change
                             </h1>
                             <article class="message is-dark">
                                 <div class="message-body">
