--- a/food.html
+++ b/food.html
@@ -75,15 +75,22 @@
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-content">
-                                        <p class="title is-4">Lab</p>
-                                        <p class="subtitle is-6">Harry</p>
+                                        <p class="title is-4">labrador</p>
+                                        <p class="subtitle is-6">
+                                            The Labrador Retriever or simply
+                                            Labrador is a British breed of
+                                            retriever gun dog.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -103,15 +110,22 @@
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-content">
-                                        <p class="title is-4">Lab</p>
-                                        <p class="subtitle is-6">Harry</p>
+                                        <p class="title is-4">labrador</p>
+                                        <p class="subtitle is-6">
+                                            The Labrador Retriever or simply
+                                            Labrador is a British breed of
+                                            retriever gun dog.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +138,7 @@
                                     style="object-fit: cover"
                                 >
                                     <img
-                                        src="https://images.unsplash.com/photo-1632165258904-21ca36a01ee0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                                        src="https://images.unsplash.com/photo-1584128144719-15c684fbcb3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dGliZXRhbiUyMG1hc3RpZmZ8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60"
                                         alt="Placeholder image"
                                     />
                                 </figure>
@@ -132,15 +146,23 @@
                             <div class="card-content">
                                 <div class="media">
                                     <div class="media-content">
-                                        <p class="title is-4">Lab</p>
-                                        <p class="subtitle is-6">Harry</p>
+                                        <p class="title is-4">
+                                            tibetan mastiff
+                                        </p>
+                                        <p class="subtitle is-6">
+                                            The Tibetan Mastiff is a large size
+                                            Tibetan dog breed.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -158,13 +180,22 @@
                                 <div class="media">
                                     <div class="media-content">
                                         <p class="title is-4">Pug</p>
+                                        <p class="subtitle is-6">
+                                            The Pug is a breed of dog originally
+                                            from China, with physically
+                                            distinctive features of a wrinkly,
+                                            short-muzzled face and curled tail.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.Lorem20
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -182,13 +213,21 @@
                                 <div class="media">
                                     <div class="media-content">
                                         <p class="title is-4">German Shepard</p>
+                                        <p class="subtitle is-6">
+                                            The German Shepherd or Alsatian is a
+                                            German breed of working dog of
+                                            medium to large size.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -207,13 +246,21 @@
                                 <div class="media">
                                     <div class="media-content">
                                         <p class="title is-4">German Shepard</p>
+                                        <p class="subtitle is-6">
+                                            The German Shepherd or Alsatian is a
+                                            German breed of working dog of
+                                            medium to large size.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -231,13 +278,23 @@
                                 <div class="media">
                                     <div class="media-content">
                                         <p class="title is-4">Doberman</p>
+                                        <p class="subtitle is-6">
+                                            The Dobermann, or Doberman Pinscher
+                                            in the United States and Canada, is
+                                            a medium-large breed of domestic dog
+                                            that was originally developed around
+                                            1890
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris. \
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -255,13 +312,21 @@
                                 <div class="media">
                                     <div class="media-content">
                                         <p class="title is-4">Husky</p>
+                                        <p class="subtitle is-6">
+                                            The Siberian Husky is a medium-sized
+                                            working sled dog breed. The breed
+                                            belongs to the Spitz genetic family.
+                                        </p>
                                     </div>
                                 </div>
 
                                 <div class="content">
-                                    Lorem ipsum dolor sit amet, consectetur
-                                    adipiscing elit. Phasellus nec iaculis
-                                    mauris.
+                                    <p>Food</p>
+                                    <ul>
+                                        <li>Lorem, ipsum dolor.</li>
+                                        <li>Lorem ipsum sit.</li>
+                                        <li>Lorem sit amet.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
