--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="column is-half">
                         <div class="card has-background-light">
                             <div class="card-content">
-                                <p class="title">“Tell us about you Leo!”</p>
+                                <p class="title">“Tell us about you Stella!”</p>
                                 <p class="subtitle">
                                     Fill out the form for further assistance and
                                     details.
