--- a/food.html
+++ b/food.html
@@ -21,6 +21,7 @@
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/index.html">
                         <img src="brown logo.png" id="img" />
+                        PAW Shelter
                     </a>
 
                     <a
