--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/index.html">
                         <img src="brown logo.png" id="img" />
+                        PAW Shelter
                     </a>
 
                     <a
