fix images and typo on index page

--- a/food.html
+++ b/food.html
@@ -63,15 +63,11 @@
                     <div class="card-parent">
                         <div class="card">
                             <div class="card-image">
-                                <figure
-                                    class="image is-square"
-                                    style="object-fit: cover"
-                                >
-                                    <img
-                                        src="https://images.unsplash.com/photo-1529831129093-0fa4866281ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1529831129093-0fa4866281ee?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -98,15 +94,11 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <figure
-                                    class="image is-square"
-                                    style="object-fit: cover"
-                                >
-                                    <img
-                                        src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1561495376-dc9c7c5b8726?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=880&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -134,15 +126,11 @@
                     <div class="card-parent">
                         <div class="card">
                             <div class="card-image">
-                                <figure
-                                    class="image is-square"
-                                    style="object-fit: cover"
-                                >
-                                    <img
-                                        src="https://images.unsplash.com/photo-1584128144719-15c684fbcb3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dGliZXRhbiUyMG1hc3RpZmZ8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1584128144719-15c684fbcb3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8dGliZXRhbiUyMG1hc3RpZmZ8ZW58MHx8MHx8&auto=format&fit=crop&w=800&q=60"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -170,12 +158,11 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img
-                                        src="https://images.unsplash.com/photo-1521907554502-7440e4702fc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1521907554502-7440e4702fc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -203,12 +190,11 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img
-                                        src="https://images.unsplash.com/photo-1628579550131-a99284d5b330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1628579550131-a99284d5b330?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -236,12 +222,11 @@
                     <div class="card-parent">
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img
-                                        src="https://images.unsplash.com/photo-1550165298-e574b8c3c7f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=749&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1550165298-e574b8c3c7f6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=749&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -268,12 +253,11 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img
-                                        src="https://images.unsplash.com/photo-1616322494008-d2c1712bbe50?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1616322494008-d2c1712bbe50?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1374&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
@@ -302,12 +286,11 @@
 
                         <div class="card">
                             <div class="card-image">
-                                <figure class="image is-4by3">
-                                    <img
-                                        src="https://images.unsplash.com/photo-1590925888274-723778397410?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
-                                        alt="Placeholder image"
-                                    />
-                                </figure>
+                                <img
+                                    id="image_"
+                                    src="https://images.unsplash.com/photo-1590925888274-723778397410?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=735&q=80"
+                                    alt="Placeholder image"
+                                />
                             </div>
                             <div class="card-content">
                                 <div class="media">
