--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
                     <div class="column is-half">
                         <div class="card has-background-light">
                             <div class="card-content">
-                                <p class="title">“Tell us about you Stella!”</p>
+                                <p class="title">
+                                    “Tell us about your Stella!”
+                                </p>
                                 <p class="subtitle">
                                     Fill out the form for further assistance and
                                     details.
