--- a/articles.html
+++ b/articles.html
@@ -5,6 +5,27 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+        <meta name="msapplication-TileColor" content="#da532c" />
+        <meta name="theme-color" content="#ffffff" />
+        <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.4/css/bulma.min.css"
             integrity="sha512-HqxHUkJM0SYcbvxUw5P60SzdOTy/QVwA1JJrvaXJv4q7lmbDZCmZaqz01UPOaQveoxfYRv1tHozWGPMcuTBuvQ=="
@@ -12,11 +33,15 @@
             referrerpolicy="no-referrer"
         />
         <link rel="stylesheet" href="style.css" />
-        <title>PAWS 🐶 ARTICLES</title>
+        <title>PAWS | ARTICLES</title>
     </head>
     <body>
         <header>
-            <nav class="navbar" role="navigation">
+            <nav
+                class="navbar is-warning px-6 py-3"
+                style="border-radius: 25px"
+                role="navigation"
+            >
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/index.html">
                         <img src="brown logo.png" id="img" />
@@ -45,11 +70,16 @@
                             </div>
                         </div> -->
                         <a class="navbar-item" href="/index.html"> Home </a>
-                        <a class="navbar-item" href="/articles.html">
+                        <a
+                            id="active"
+                            class="navbar-item"
+                            href="/articles.html"
+                        >
                             Articles
                         </a>
-                        <a class="navbar-item" href="/food.html">
-                            Dog Details
+                        <a class="navbar-item" href="/food.html"> Dog Food </a>
+                        <a class="navbar-item" href="/appointment.html">
+                            Appointments
                         </a>
                         <a class="navbar-item" href="/about.html"> About </a>
                     </div>
