--- a/about.html
+++ b/about.html
@@ -127,24 +127,45 @@
                     </div>
                 </div>
                 <br />
-                <section class="px-3" style="margin-left: 50px">
-                    <h1 class="title">Contact Details</h1>
-                    <h2 class="subtitle">
-                        <ul>
-                            <li>
-                                <a href="tel:+919851743471">
-                                    Contact no: +919851743471</a
-                                >
-                            </li>
-                            <li>
-                                <a href="mailto:pawshelterservice@gmail.com">
-                                    E-mail: pawshelterservice@gmail.com</a
-                                >
-                            </li>
-                            <li>Address: Rajouri Garden, New Delhi, 110027</li>
-                        </ul>
-                    </h2>
-                </section>
+                <div class="columns">
+                    <div class="column is-half">
+                        <section style="margin-left: 50px">
+                            <h1 class="title">Contact Details</h1>
+                            <h2 class="subtitle">
+                                <ul>
+                                    <li>
+                                        <a href="tel:+919851743471">
+                                            Contact no: +919851743471</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="mailto:pawshelterservice@gmail.com"
+                                        >
+                                            E-mail:
+                                            pawshelterservice@gmail.com</a
+                                        >
+                                    </li>
+                                    <li>
+                                        Address: Rajouri Garden, New Delhi,
+                                        110027
+                                    </li>
+                                </ul>
+                            </h2>
+                        </section>
+                    </div>
+                    <div class="column is-half">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14006.074533767354!2d77.11185742859865!3d28.64418576860908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d036b61214b21%3A0xaaa9a3b98a1faee2!2sRajouri%20Garden%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1660872576608!5m2!1sen!2sin"
+                            width="400"
+                            height="300"
+                            style="border: 0"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"
+                        ></iframe>
+                    </div>
+                </div>
             </div>
         </main>
         <hr />
