--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                                 <p class="card-footer-item">
                                     <span>
                                         <a
+                                            tabindex="0"
                                             role="button"
                                             class="has-text-centered card-footer-item"
                                             id="shelter-btn"
@@ -159,6 +160,7 @@
                                 <p class="card-footer-item">
                                     <span>
                                         <a
+                                            tabindex="0"
                                             role="button"
                                             class="has-text-centered card-footer-item"
                                             id="dog-btn"
